# drf-stripe-subscription

./: .gitignore  LICENSE  README.md  env_setup.sh  make_package_migrations.py  manifest.in  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
drf_stripe/: admin.py  apps.py  models.py  serializers.py  settings.py  urls.py  views.py
drf_stripe/management/commands/: pull_stripe.py  update_stripe_customers.py  update_stripe_products.py  update_stripe_subscriptions.py
drf_stripe/migrations/: 0001_initial.py  0002_alter_feature_description_alter_price_freq_and_more.py  0003_price_currency.py
drf_stripe/stripe_api/: api.py  checkout.py  customer_portal.py  customers.py  products.py  subscription.py  subscriptions.py  webhooks.py
drf_stripe/stripe_models/: currency.py  customer.py  event.py  invoice.py  price.py  product.py  subscription.py
drf_stripe/stripe_webhooks/: customer_subscription.py  handler.py  price.py  product.py
drf_stripe/webhook_models/: invoice.py  subscription.py
tests/: base.py  settings.py  test_webhook_event_handlers.py  urls.py
tests/api/: test_customer.py  test_update_customers.py  test_update_products_prices.py  test_update_subscriptions.py
tests/mock_responses/2020-08-27/: webhook_price_created.json  webhook_price_updated.json  webhook_price_updated_archived.json  webhook_product_created.json  webhook_product_updated.json  webhook_product_updated_archived.json  webhook_subscription_created.json  webhook_subscription_updated_apply_coupon.json  webhook_subscription_updated_billing_frequency.json  webhook_subscription_updated_cancel_at_period_end.json  webhook_subscription_updated_cancel_immediate.json  webhook_subscription_updated_renew_plan.json
tests/mock_responses/v1/: api_customer_list_2_items.json  api_price_list.json  api_product_list.json  api_subscription_list.json  stripe_price_list.json  stripe_product_list.json  webhook_price_created.json  webhook_price_deleted.json  webhook_price_updated.json  webhook_product_created.json  webhook_product_deleted.json  webhook_product_updated.json
tests/webhook/: test_event_product_price.py  test_subscription.py
